--- a/src/MSHU.CarWash.Services/MSHU.CarWash.Services.csproj
+++ b/src/MSHU.CarWash.Services/MSHU.CarWash.Services.csproj
@@ -9,8 +9,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CarWashService</RootNamespace>
-    <AssemblyName>CarWashService</AssemblyName>
+    <RootNamespace>MSHU.CarWashService</RootNamespace>
+    <AssemblyName>MSHU.CarWash.Services</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -94,6 +94,7 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Web.Http">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
@@ -159,9 +160,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\Startup.MobileApp.cs" />
-    <Compile Include="Controllers\TodoItemController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="DataObjects\TodoItem.cs" />
+    <Compile Include="Controllers\CalendarController.cs" />
+    <Compile Include="Controllers\EmployeesController.cs" />
+    <Compile Include="DataObjects\DayDetailsDto.cs" />
+    <Compile Include="DataObjects\DayDto.cs" />
+    <Compile Include="DataObjects\NewReservationDto.cs" />
+    <Compile Include="DataObjects\ReservationDayDetailsDto.cs" />
+    <Compile Include="DataObjects\ReservationDayDetailDto.cs" />
+    <Compile Include="DataObjects\ReservationDetailDto.cs" />
+    <Compile Include="DataObjects\ReservationDto.cs" />
+    <Compile Include="DataObjects\ServiceDto.cs" />
+    <Compile Include="DataObjects\WeekDto.cs" />
+    <Compile Include="DataObjects\EmployeeDto.cs" />
+    <Compile Include="Helpers\DateExtensions.cs" />
+    <Compile Include="Helpers\EnumExtensions.cs" />
+    <Compile Include="Helpers\RequireHttpsAttribute.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Reservation.cs" />
+    <Compile Include="Models\ServiceEnum.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Helpers\UserHelper.cs" />
     <Compile Include="Models\CarWashContext.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
