--- a/src/MSHU.CarWash.UWP/project.json
+++ b/src/MSHU.CarWash.UWP/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "Microsoft.IdentityModel.Clients.ActiveDirectory": "2.21.301221612",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "WindowsAzure.MobileServices": "1.3.2"
   },
