Testing with AzureAD solution

--- a/src/MSHU.CarWash.Services/Web.config
+++ b/src/MSHU.CarWash.Services/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -8,18 +8,19 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MSHU.CarWashService-20160115042722.mdf;Initial Catalog=aspnet-MSHU.CarWashService-20160115042722;Integrated Security=True;MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
+    <add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MSHU.CarWashService-20160115042722.mdf;Initial Catalog=aspnet-MSHU.CarWashService-20160115042722;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <!-- For Visual Studio 2013 / SQL Express Local DB 2012 replace the above with this setting
     <add name="MS_TableConnectionString" connectionString="Data Source=(localdb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MSHU.CarWashService-20160115042722.mdf;Initial Catalog=aspnet-MSHU.CarWashService-20160115042722;Integrated Security=True;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient" /> 
       -->
-    <add name="MS_NotificationHubConnectionString" connectionString="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]"/>
+    <add name="MS_NotificationHubConnectionString" connectionString="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
   </connectionStrings>
   <appSettings>
     <!-- Use these settings for local development. After publishing to your
     Mobile App, these settings will be overridden by the values specified
     in the portal. -->
+    <add key="ida:Tenant" value="microsoft.onmicrosoft.com" />
+    <add key="ida:Audience" value="8ff6b2ad-4acc-44eb-b569-7f5922ab8a31" />
     <add key="SigningKey" value="Use App Service Authentication Signing Key here to validate tokens" />
     <add key="ValidAudience" value="https://{yoursite}.azurewebsites.net/" />
     <add key="ValidIssuer" value="https://{yoursite}.azurewebsites.net/" />
@@ -37,6 +38,18 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <rewrite>
+      <rules>
+        <rule name="RedirectToHttps">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="Off" />
+            <add input="{REQUEST_METHOD}" pattern="^get$|^head$|^post$" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1" xmlns:bcl="urn:schemas-microsoft-com:bcl">
@@ -71,6 +84,18 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.20511.1437" newVersion="4.0.20511.1437" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
