--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -97,6 +97,7 @@
     </Compile>
     <Compile Include="Common\AuthenticationManager.cs" />
     <Compile Include="Common\SuspensionManager.cs" />
+    <Compile Include="Common\UI\UIHelper.cs" />
     <Compile Include="Controls\NavigationMenuItem.cs" />
     <Compile Include="Controls\NavigationMenuListView.cs" />
     <Compile Include="Converters\CalendarViewDayItemConverter.cs" />
