Registration page extended (ServiceClient extended with SaveReservation and GetCurrentUser).
Related Work Items: #55

--- a/src/MSHU.CarWash.DomainModel/MSHU.CarWash.DomainModel.csproj
+++ b/src/MSHU.CarWash.DomainModel/MSHU.CarWash.DomainModel.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Employee.cs" />
+    <Compile Include="Helpers\EnumExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reservation.cs" />
     <Compile Include="ReservationViewModels.cs" />
