--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Controls\ReservationDetailsView.xaml.cs">
       <DependentUpon>ReservationDetailsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\ButtonsDisplayModeConverter.cs" />
     <Compile Include="Converters\CalendarViewDayItemConverter.cs" />
     <Compile Include="Converters\InverseReferenceToVisibilityConverter.cs" />
     <Compile Include="Converters\ReferenceToVisibilityConverter.cs" />
