Weekend has been disabled in the RegistrationsPage.
Related Work Items: #55

--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="Converters\ButtonsDisplayModeConverter.cs" />
     <Compile Include="Converters\CalendarViewDayItemConverter.cs" />
+    <Compile Include="Converters\InverseBooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\InverseReferenceToVisibilityConverter.cs" />
     <Compile Include="Converters\ReferenceToVisibilityConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
