Fixed: users can have two active registrations at the same time Also updated .gitignore
Related Work Items: #74

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/src/MSHU.CarWash.UWP/bin/x86/Debug
-/src/MSHU.CarWash.UWP/obj/x86/Debug
+/src/MSHU.CarWash.UWP/bin
+/src/MSHU.CarWash.UWP/obj
