--- a/src/MSHU.CarWash.Web/MSHU.CarWash.Web.csproj
+++ b/src/MSHU.CarWash.Web/MSHU.CarWash.Web.csproj
@@ -196,6 +196,7 @@
     <Content Include="Scripts\angular-messages.min.js" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
+    <Compile Include="App_Start\AiExceptionLogger.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
     <Content Include="Content\fonts\fontawesome-webfont.ttf" />
