--- a/src/MSHU.CarWash.UWP/project.json
+++ b/src/MSHU.CarWash.UWP/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Microsoft.IdentityModel.Clients.ActiveDirectory": "2.21.301221612",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Microsoft.NETNative.Analyzer": "1.0.0",
     "WindowsAzure.MobileServices": "1.3.2"
   },
   "frameworks": {
