Added a Settings for adding default number plate - compulsory step for new users
Related Work Items: #117, #121

--- a/src/MSHU.CarWash.DomainModel/MSHU.CarWash.DomainModel.csproj
+++ b/src/MSHU.CarWash.DomainModel/MSHU.CarWash.DomainModel.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Reservation.cs" />
     <Compile Include="ReservationViewModels.cs" />
     <Compile Include="ServiceEnum.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
