--- a/src/MSHU.CarWash.Web/MSHU.CarWash.Web.csproj
+++ b/src/MSHU.CarWash.Web/MSHU.CarWash.Web.csproj
@@ -15,7 +15,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MSHU.CarWash</RootNamespace>
     <AssemblyName>MSHU.CarWash</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
@@ -291,6 +291,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MSHU.CarWash.DomainModel\MSHU.CarWash.DomainModel.csproj">
+      <Project>{df7d82ed-5729-4823-b30a-254e64ab0fff}</Project>
+      <Name>MSHU.CarWash.DomainModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
