--- a/src/MSHU.CarWash.Web/Web.config
+++ b/src/MSHU.CarWash.Web/Web.config
@@ -15,7 +15,8 @@
     <add key="ida:Tenant" value="microsoft.onmicrosoft.com"/>
     <add key="ida:Audiences" value="63c914db-a84c-466b-a6bb-f4a2a101bb66;https://vadkertitestwebapp.azurewebsites.net"/>
     <add key="SlotsPerDay" value="8"/>
-    <add key="ExceptionalDays" value="2016-01-01:0;"/>
+    <add key="SteamSlotsOnTuesday" value="8"/>
+    <add key="ExceptionalDays" value="2016-01-01:0,0;"/>
     <add key="MontlySlotLimitPerPerson" value="200"/>
     <add key="Admins" value="a-libill@microsoft.com;gkulcsar@microsoft.com"/>
   </appSettings>
