--- a/src/MSHU.CarWash.UWP/project.json
+++ b/src/MSHU.CarWash.UWP/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "HockeySDK.UWP": "4.0.0",
     "Microsoft.IdentityModel.Clients.ActiveDirectory": "2.21.301221612",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
     "Microsoft.NETNative.Analyzer": "1.0.0",
