Implemented #80: 11 slots / day, Admins is now optional element in web.config.

--- a/src/MSHU.CarWash.Web/Web.config
+++ b/src/MSHU.CarWash.Web/Web.config
@@ -14,11 +14,12 @@
   <appSettings>
     <add key="ida:Tenant" value="microsoft.onmicrosoft.com"/>
     <add key="ida:Audiences" value="63c914db-a84c-466b-a6bb-f4a2a101bb66;https://vadkertitestwebapp.azurewebsites.net"/>
-    <add key="SlotsPerDay" value="8"/>
+    <add key="SlotsPerDay" value="11"/>
     <add key="SteamSlotsOnTuesday" value="8"/>
     <add key="ExceptionalDays" value="2016-01-01:0,0;"/>
     <add key="MontlySlotLimitPerPerson" value="200"/>
-    <add key="Admins" value="a-libill@microsoft.com;gkulcsar@microsoft.com"/>
+    <add key="Admins" value="gkulcsar@microsoft.com"/>
+    <!--<add key="Admins" value="a-libill@microsoft.com;gkulcsar@microsoft.com"/>-->
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
