--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -251,9 +251,7 @@
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SampleData\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
