Modified web.config so that only Linda is admin by default; use Azure's AppSettings to make yourself temp admin

--- a/src/MSHU.CarWash.Web/Web.config
+++ b/src/MSHU.CarWash.Web/Web.config
@@ -18,7 +18,7 @@
     <add key="SteamSlotsOnTuesday" value="8"/>
     <add key="ExceptionalDays" value="2016-01-01:0,0;"/>
     <add key="MontlySlotLimitPerPerson" value="200"/>
-    <add key="Admins" value="a-libill@microsoft.com;gkulcsar@microsoft.com"/>
+    <add key="Admins" value="a-libill@microsoft.com"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
