Replacing appointment service with dummy implementation
Related Work Items: #369, #370

--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -124,6 +124,7 @@
     <Compile Include="ServiceClient\UserInfo.cs" />
     <Compile Include="Services\AppointmentInfo.cs" />
     <Compile Include="Services\CalendarAppAppointmentService.cs" />
+    <Compile Include="Services\DummyAppointmentService.cs" />
     <Compile Include="Services\IAppointmentService.cs" />
     <Compile Include="ViewModels\AppShellViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
