--- a/src/MSHU.CarWash.Web/MSHU.CarWash.Web.csproj
+++ b/src/MSHU.CarWash.Web/MSHU.CarWash.Web.csproj
@@ -184,6 +184,7 @@
     </Content>
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\img\loading.gif" />
+    <Content Include="Content\img\WIN14_Chiara_01.png" />
     <Content Include="Migrations\readme.txt" />
     <Content Include="packages.config">
       <SubType>Designer</SubType>
