--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -119,7 +119,7 @@
     <Compile Include="Converters\ReferenceToVisibilityConverter.cs" />
     <Compile Include="Converters\StatusConverter.cs" />
     <Compile Include="Converters\StringToVisibilityConverter.cs" />
-    <Compile Include="Interfaces\ISettingsStoreService.cs" />
+    <Compile Include="Interfaces\ISettingsStore.cs" />
     <Compile Include="Interfaces\IWhatsNewService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceClient\ServiceClient.cs" />
