--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Converters\StatusConverter.cs" />
     <Compile Include="Converters\StringToVisibilityConverter.cs" />
     <Compile Include="Interfaces\ISettingsStore.cs" />
-    <Compile Include="Interfaces\IWhatsNewService.cs" />
+    <Compile Include="Interfaces\IWhatsNew.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceClient\ServiceClient.cs" />
     <Compile Include="ServiceClient\UserInfo.cs" />
