--- a/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
+++ b/src/MSHU.CarWash.UWP/MSHU.CarWash.UWP.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Services\CalendarAppAppointmentService.cs" />
     <Compile Include="Services\DummyAppointmentService.cs" />
     <Compile Include="Services\IAppointmentService.cs" />
+    <Compile Include="Services\RoamingSettingsStoreService.cs" />
     <Compile Include="ViewModels\AppShellViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
