--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -1,15 +1,39 @@
 {
-  "name": "MSHU.CarWash.PWA",
+  "name": "mshu_carwash_pwa",
   "version": "0.1.0",
   "private": true,
+  "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
+  "repository": {
+    "type": "git",
+    "url": "https://jovadker.visualstudio.com/_git/CarWash"
+  },
+  "homepage": "https://mshucarwash-dev.azurewebsites.net",
+  "keywords": [
+    "pwa",
+    "react",
+    "aspnetcore2.1"
+  ],
+  "author": {
+    "name": "Microsoft",
+    "url": "https://www.microsoft.com"
+  },
+  "contributors": [
+    "Mark Szabo",
+    "Jozsef Vadkerti",
+    "Akos Szego",
+    "Tamas Veiland"
+  ],
+  "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
     "bootstrap": "^3.3.7",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.4",
     "rimraf": "^2.6.2"
   },
   "scripts": {
