--- a/src/MSHU.CarWash.PWA/ClientApp/public/manifest.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/public/manifest.json
@@ -1,15 +1,96 @@
 {
-  "short_name": "MSHU.CarWash.PWA",
-  "name": "MSHU.CarWash.PWA",
+  "dir": "ltr",
+  "lang": "en",
+  "name": "CarWash",
+  "short_name": "CarWash",
+  "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
+  "related_applications": [],
+  "prefer_related_applications": false,
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#80d8ff",
+  "background_color": "#80d8ff",
+  "orientation": "any",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/images/icon192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon24.png",
+      "sizes": "24x24",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon36.png",
+      "sizes": "36x36",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon44.png",
+      "sizes": "44x44",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon50.png",
+      "sizes": "50x50",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon76.png",
+      "sizes": "76x76",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon88.png",
+      "sizes": "88x88",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon180.png",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon1024.png",
+      "sizes": "1024x1024",
+      "type": "image/png"
+    },
+    {
+      "src": "/images/icon2048.png",
+      "sizes": "2048x2048",
+      "type": "image/png"
     }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
