--- a/src/MSHU.CarWash.PWA/appsettings.Development.json
+++ b/src/MSHU.CarWash.PWA/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "SmtpConfig": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "UseSSL": true, //STARTTLS
+    "Name": "CarWash",
+    "Username": "carwashapp@microsoft.com",
+    "EmailAddress": "carwashapp@microsoft.com",
+    "Password": "passwordhere"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
