--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -26,12 +26,12 @@
   "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
     "@material-ui/core": "^1.3.1",
-    "bootstrap": "^3.3.7",
+    "@material-ui/icons": "^1.1.0",
+    "ajv": "^6.5.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
     "rimraf": "^2.6.2"
