--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -2,7 +2,7 @@
   "SmtpConfig": {
     "Host": "smtp.office365.com",
     "Port": 587,
-    "UseSSL": true, //STARTTLS
+    "UseSSL": true,
     "Name": "CarWash",
     "Username": "carwashapp@microsoft.com",
     "EmailAddress": "carwashapp@microsoft.com",
@@ -13,5 +13,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "e73dbd9a-80fe-4272-a698-1f74de141c67"
+  }
 }
