--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
+    "adal-angular": "^1.0.17",
     "ajv": "^6.5.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
