--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -1,12 +1,10 @@
 {
-  "SmtpConfig": {
-    "Host": "smtp.office365.com",
-    "Port": 587,
-    "UseSSL": true,
-    "Name": "CarWash",
-    "Username": "carwashapp@microsoft.com",
-    "EmailAddress": "carwashapp@microsoft.com",
-    "Password": "passwordhere"
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/common/",
+    "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
