--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -4,7 +4,8 @@
     "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828"
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "Database": "",
+    "StorageAccount": ""
   },
   "Logging": {
     "LogLevel": {
