Users & Reservations API

--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://jovadker.visualstudio.com/_git/CarWash"
   },
-  "homepage": "https://mshucarwash-dev.azurewebsites.net",
+  "homepage": "https://carwashu.azurewebsites.net",
   "keywords": [
     "pwa",
     "react",
