--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,10 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
+    "command": "npm",
     "tasks": [
         {
+            "label": "build",
             "type": "npm",
             "script": "build",
             "path": "src/MSHU.CarWash.PWA/ClientApp/",
