--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
         {
             "label": "build",
             "type": "npm",
-            "script": "build",
+            "script": "start",
             "path": "src/MSHU.CarWash.PWA/ClientApp/",
             "problemMatcher": []
         }
