Reserve form WIP3
Calendar

--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -31,7 +31,9 @@
     "ajv": "^6.5.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
+    "react-infinite-calendar": "^2.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
