Reserve form WIP8

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ PublishProfiles
 *.user
 /src/MSHU.CarWash.Web/App_Data/MSHUCarWashContext-20151207160057.mdf
 /src/MSHU.CarWash.Web/App_Data/MSHUCarWashContext-20151207160057_log.ldf
+
+src/MSHU\.CarWash\.PWA/appsettings\.Development\.json
